--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ chardet==3.0.4
 click==7.1.2
 emoji==0.6.0
 Flask==1.1.2
-Flask-SQLAlchemy @ file:///home/conda/feedstock_root/build_artifacts/flask-sqlalchemy_1594747318500/work
+Flask-SQLAlchemy==2.4.4
 gast==0.3.3
 google-auth==1.23.0
 google-auth-oauthlib==0.4.2
@@ -18,35 +18,35 @@ idna==2.10
 importlib-metadata==3.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
-joblib @ file:///tmp/build/80754af9/joblib_1601912903842/work
+joblib==0.17.0
 Keras-Preprocessing==1.1.2
 Markdown==3.3.3
-MarkupSafe @ file:///C:/ci/markupsafe_1594405949945/work
+MarkupSafe==1.1.1 
 mkl-fft==1.2.0
 mkl-random==1.1.1
 mkl-service==2.3.0
-nltk @ file:///tmp/build/80754af9/nltk_1592496090529/work
-numpy @ file:///C:/ci/numpy_and_numpy_base_1603468620949/work
+nltk==3.5
+numpy==1.18.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
-pandas @ file:///C:/ci/pandas_1602088205210/work
+pandas==1.1.3 
 protobuf==3.14.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 python-dateutil==2.8.1
-pytz @ file:///tmp/build/80754af9/pytz_1606604771399/work
-regex @ file:///C:/ci/regex_1606691216163/work
+pytz==2020.4 
+regex==2020.11.13 
 requests==2.25.0
 requests-oauthlib==1.3.0
 rsa==4.6
-six @ file:///C:/ci/six_1605205426665/work
-SQLAlchemy @ file:///C:/ci/sqlalchemy_1603818968375/work
+six==1.15.0 
+SQLAlchemy=1.3.20
 tensorboard==2.4.0
 tensorboard-plugin-wit==1.7.0
 tensorflow==2.3.1
 tensorflow-estimator==2.3.0
 termcolor==1.1.0
-tqdm @ file:///tmp/build/80754af9/tqdm_1606938474023/work
+tqdm=4.54.0
 urllib3==1.26.2
 Werkzeug==1.0.1
 wincertstore==0.2
