--- a/requirements.txt
+++ b/requirements.txt
@@ -40,13 +40,13 @@ requests==2.25.0
 requests-oauthlib==1.3.0
 rsa==4.6
 six==1.15.0 
-SQLAlchemy=1.3.20
+SQLAlchemy==1.3.20
 tensorboard==2.4.0
 tensorboard-plugin-wit==1.7.0
 tensorflow==2.3.1
 tensorflow-estimator==2.3.0
 termcolor==1.1.0
-tqdm=4.54.0
+tqdm==4.54.0
 urllib3==1.26.2
 Werkzeug==1.0.1
 wincertstore==0.2
