--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ chardet==3.0.4
 click==7.1.2
 emoji==0.6.0
 Flask==1.1.2
-Flask-SQLAlchemy==2.4.4
+Flask-SQLAlchemy 
 gast==0.3.3
 google-auth==1.23.0
 google-auth-oauthlib==0.4.2
@@ -18,35 +18,35 @@ idna==2.10
 importlib-metadata==3.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
-joblib==0.17.0
+joblib 
 Keras-Preprocessing==1.1.2
 Markdown==3.3.3
-MarkupSafe==1.1.1 
+MarkupSafe 
 mkl-fft==1.2.0
 mkl-random==1.1.1
 mkl-service==2.3.0
-nltk==3.5
-numpy==1.18.5
+nltk 
+numpy 
 oauthlib==3.1.0
 opt-einsum==3.3.0
-pandas==1.1.3 
+pandas 
 protobuf==3.14.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 python-dateutil==2.8.1
-pytz==2020.4 
-regex==2020.11.13 
+pytz 
+regex 
 requests==2.25.0
 requests-oauthlib==1.3.0
 rsa==4.6
-six==1.15.0 
-SQLAlchemy==1.3.20
+six 
+SQLAlchemy 
 tensorboard==2.4.0
 tensorboard-plugin-wit==1.7.0
 tensorflow==2.3.1
 tensorflow-estimator==2.3.0
 termcolor==1.1.0
-tqdm==4.54.0
+tqdm 
 urllib3==1.26.2
 Werkzeug==1.0.1
 wincertstore==0.2
