requirements.txt modified

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ joblib
 Keras-Preprocessing==1.1.2
 Markdown==3.3.3
 MarkupSafe 
-mkl-fft==1.2.0
+mkl-fft
 mkl-random==1.1.1
 mkl-service==2.3.0
 nltk 
