--- a/requirements.txt
+++ b/requirements.txt
@@ -42,7 +42,7 @@ six
 SQLAlchemy 
 tensorboard==2.4.0
 tensorboard-plugin-wit==1.7.0
-tensorflow==2.3.1
+tensorflow-cpu==2.0.0
 tensorflow-estimator==2.3.0
 termcolor==1.1.0
 tqdm 
