--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ Keras-Preprocessing==1.1.2
 Markdown==3.3.3
 MarkupSafe 
 nltk 
-numpy 
+numpy==1.18.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
 pandas 
